@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Optimizations based on Minion::Backend::Pg 7.01.
+  - Add support for rate limiting and unique jobs with lock and unlock methods.
 
 1.000     2017-04-14 14:54:28 EDT
   - Support retrying active jobs in retry_job.
